--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.6
-minecraft_dependency=>=1.20.5 <1.21
-minecraft_suffix=mc1.20.6
+minecraft_version=1.21
+minecraft_dependency=>=1.21 <1.22
+minecraft_suffix=mc1.21
 java_target=21
 java_dependency=>=21
-resource_pack_format=32
+resource_pack_format=34
 
 # Fabric
 fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.100.4+1.20.6
-fabric_api_dependency=*
+fabric_api_version=0.100.6+1.21
+fabric_api_dependency=>=0.100.6
 
 # Mixin
 mixin_minimum_version=0.8
@@ -38,14 +38,14 @@ maven_group=com.supermartijn642
 # CurseForge
 curseforge_project_id=301034
 curseforge_release_type=release
-curseforge_game_versions=1.20.5 1.20.6
+curseforge_game_versions=1.21
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
 
 # Modrinth
 modrinth_project_id=entangled
 modrinth_release_type=release
-modrinth_game_versions=1.20.5 1.20.6
+modrinth_game_versions=1.21
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
@@ -54,8 +54,8 @@ core_library_file=5102290
 core_library_dependency=>=1.1.17 <1.2.0
 config_library_file=4629803
 config_library_dependency=>=1.1.0
-team_reborn_energy_version=4.0.1
-jade_version=5366607
+team_reborn_energy_version=4.1.0
+jade_version=5493289
 
 # Runtime mods
 just_enough_items_file=5101373
