--- a/gradle.properties
+++ b/gradle.properties
@@ -33,24 +33,20 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.14 1.14.1 1.14.2 1.14.3 1.14.4
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.14 1.14.1 1.14.2 1.14.3 1.14.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.14 1.14.1 1.14.2 1.14.3 1.14.4
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=5102773
 core_library_dependency=[1.1.17,1.2.0)
-config_library_file=4629788
+config_library_file=4715397
 config_library_dependency=[1.1.6,)
 hwyla_file=2777880
 the_one_probe_file=2796414
