--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ java_dependency=>=8
 resource_pack_format=6
 
 # Forge
-forge_version=36.2.0
+forge_version=36.2.42
 forge_dependency=[32,)
 javafml_dependency=[32,)
 
@@ -33,24 +33,20 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.16 1.16.1 1.16.2 1.16.3 1.16.4 1.16.5
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.16 1.16.1 1.16.2 1.16.3 1.16.4 1.16.5
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.16 1.16.1 1.16.2 1.16.3 1.16.4 1.16.5
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=5102506
 core_library_dependency=[1.1.17,1.2.0)
-config_library_file=4629790
+config_library_file=4715401
 config_library_dependency=[1.1.6,)
 hwyla_file=3033593
 the_one_probe_file=3319255
