--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ minecraft_dependency=[1.19.4,1.20)
 minecraft_suffix=mc1.19.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=12
+resource_pack_format=13
 
 # Forge
-forge_version=45.0.64
+forge_version=45.3.3
 forge_dependency=[45,)
 javafml_dependency=[45,)
 
@@ -33,24 +33,20 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.19.4
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.19.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.19.4
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=5102257
 core_library_dependency=[1.1.17,1.2.0)
-config_library_file=4629794
+config_library_file=4715406
 config_library_dependency=[1.1.6,)
 jade_file=4538674
 the_one_probe_file=4442439
