--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.20.1
-minecraft_dependency=[1.20,1.21)
-minecraft_suffix=mc1.20
+minecraft_version=1.20.4
+minecraft_dependency=[1.20,1.20.5)
+minecraft_suffix=mc1.20.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=15
+resource_pack_format=18
 
 # Forge
-forge_version=47.1.44
+forge_version=49.1.4
 forge_dependency=[46,)
 javafml_dependency=[46,)
 
@@ -33,24 +33,20 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.20 1.20.1 1.20.2 1.20.3 1.20.4
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
-core_library_file=5102258
+core_library_file=5102271
 core_library_dependency=[1.1.17,1.2.0)
-config_library_file=4629797
+config_library_file=4762437
 config_library_dependency=[1.1.6,)
 jade_file=5072729
 the_one_probe_file=4442439
