--- a/build.gradle
+++ b/build.gradle
@@ -103,8 +103,6 @@ minecraft {
         }
 
         data {
-            //noinspection GroovyAssignabilityCheck
-            parent runs.client
             property "--generatorModid", mod_id
             property "--output", file("src/generated/resources/")
             //noinspection GroovyAssignabilityCheck
@@ -131,6 +129,23 @@ tasks.register('processSources', Sync) {
 
 compileJava {
     source = processSources.outputs
+}
+
+// Rename the IntelliJ run configs
+gradle.taskGraph.whenReady {
+    tasks.genIntellijRuns.doLast {
+        def configDir = it.getRunConfigurationsFolder().get().getAsFile()
+        minecraft.runs.each {
+            //noinspection GroovyAssignabilityCheck
+            def configFile = new File(configDir, it.getUniqueFileName() + ".xml")
+            if(configFile.exists()){
+                def xml = new groovy.xml.XmlSlurper().parse(configFile)
+                //noinspection GrUnresolvedAccess
+                xml.configuration.@name = "Forge " + it.name.capitalize()
+                configFile.withWriter { groovy.xml.XmlUtil.serialize(xml, it) }
+            }
+        }
+    }
 }
 
 tasks.register('prepareDataResources', Sync) {
