--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ minecraft_dependency=>=1.19.4 <=1.20
 minecraft_suffix=mc1.19.4
 java_target=17
 java_dependency=>=17
-resource_pack_format=12
+resource_pack_format=13
 
 # Fabric
-fabric_loader_version=0.15.6
+fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
 fabric_api_version=0.87.2+1.19.4
 fabric_api_dependency=*
@@ -35,25 +35,21 @@ mod_main_class=Entangled
 mod_client_class=EntangledClient
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.19.4
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.19.4
 curseforge_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.19.4
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=5102285
 core_library_dependency=>=1.1.17 <1.2.0
-config_library_file=4629801
-config_library_dependency=>=1.1.0
+config_library_file=4785836
+config_library_dependency=>=1.1.6
 team_reborn_energy_version=2.2.0
 jade_version=4439089
 
