--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ resource_pack_format=34
 # Fabric
 fabric_loader_version=0.15.11
 fabric_loader_dependency=>=0.14.0
-fabric_api_version=0.100.6+1.21
-fabric_api_dependency=>=0.100.6
+fabric_api_version=0.100.7+1.21
+fabric_api_dependency=>=0.100.7
 
 # Mixin
 mixin_minimum_version=0.8
@@ -35,25 +35,21 @@ mod_main_class=Entangled
 mod_client_class=EntangledClient
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.21
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.21
-curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+curseforge_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.21
-modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
+modrinth_project_id=rylMOguI
+modrinth_required_dependency_ids=fabric-api supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
 # Dependencies
 core_library_file=5102290
 core_library_dependency=>=1.1.17 <1.2.0
 config_library_file=4629803
-config_library_dependency=>=1.1.0
+config_library_dependency=>=1.1.6
 team_reborn_energy_version=4.1.0
 jade_version=5493289
 
