--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.daemon=false
 
 # Minecraft
 minecraft_version=1.20.4
-minecraft_dependency=[1.20.3,1.21)
+minecraft_dependency=[1.20.3,1.20.5)
 minecraft_suffix=mc1.20.4
 java_target=17
 java_dependency=>=17
 resource_pack_format=22
 
 # NeoForge
-neoforge_version=20.4.159-beta
+neoforge_version=20.4.237
 neoforge_dependency=[20.3,)
 javafml_dependency=[1,)
 
@@ -33,17 +33,13 @@ mod_package=com.supermartijn642.entangled
 mod_main_class=Entangled
 maven_group=com.supermartijn642
 
-# CurseForge
+# Publishing
+publishing_release_type=stable
+publishing_game_versions=1.20.4
 curseforge_project_id=301034
-curseforge_release_type=release
-curseforge_game_versions=1.20.4
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
-
-# Modrinth
-modrinth_project_id=entangled
-modrinth_release_type=release
-modrinth_game_versions=1.20.4
+modrinth_project_id=rylMOguI
 modrinth_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 modrinth_optional_dependency_ids=
 
@@ -51,7 +47,7 @@ modrinth_optional_dependency_ids=
 core_library_file=5102300
 core_library_dependency=[1.1.17,1.2.0)
 config_library_file=5081550
-config_library_dependency=[1.1.0,)
+config_library_dependency=[1.1.6,)
 jade_file=4538674
 the_one_probe_file=4442439
 
