--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
     // Core library
-    modImplementation "com.supermartijn642.core:supermartijn642corelib:1.1.17-fabric-mc1.20.6" // TODO
+    modImplementation "curse.maven:supermartijn642s-core-lib-454372:${core_library_file}"
     // Config library
-    modImplementation "com.supermartijn642.config:supermartijn642configlib:1.1.8-fabric-mc1.20.6" // TODO
+    modImplementation "curse.maven:supermartijn642s-config-lib-438332:${config_library_file}"
 
     // Team Reborn Energy API
     modCompileOnly("teamreborn:energy:${team_reborn_energy_version}") {
