--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,9 @@ dependencies {
     implementation "net.neoforged:neoforge:${neoforge_version}"
 
     // Core library
-    implementation "com.supermartijn642.core:supermartijn642corelib:1.1.17-neoforge-mc1.21" // TODO
+    implementation "curse.maven:supermartijn642s-core-lib-454372:${core_library_file}"
     // Config library
-    implementation "com.supermartijn642.config:supermartijn642configlib:1.1.8-neoforge-mc1.21" // TODO
+    implementation "curse.maven:supermartijn642s-config-lib-438332:${config_library_file}"
 
     // Jade
     compileOnly "curse.maven:jade-324717:${jade_file}"
