--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
     // Core library
-    implementation "com.supermartijn642.core:supermartijn642corelib:1.1.17-forge-mc1.20.6" // TODO
+    implementation "curse.maven:supermartijn642s-core-lib-454372:${core_library_file}"
     // Config library
-    implementation "com.supermartijn642.config:supermartijn642configlib:1.1.8-forge-mc1.20.6" //TODO
+    implementation "curse.maven:supermartijn642s-config-lib-438332:${config_library_file}"
 
     // Just Enough Items
 //    runtimeOnly fg.deobf("curse.maven:jei-238222:${just_enough_items_file}")
