--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "curse.maven:supermartijn642s-config-lib-438332:${config_library_file}"
 
     // Just Enough Items
-//    runtimeOnly fg.deobf("curse.maven:jei-238222:${just_enough_items_file}")
+//    runtimeOnly "curse.maven:jei-238222:${just_enough_items_file}"
 
     // Hack fix for now, force jopt-simple to be exactly 5.0.4 because Mojang ships that version, but some transitive dependencies request 6.0+
     implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
@@ -130,8 +130,15 @@ tasks.register('prepareDataResources', Sync) {
     into layout.buildDirectory.dir("/data_resources")
     inputs.property "version", version
 
+    // Replace the mod version
+    Map<String, ?> copyProperties = project.properties.clone() as Map<String, ?>
+    //noinspection UnnecessaryQualifiedReference
+    var matcher = java.util.regex.Pattern.compile("[^.0-9]").matcher(copyProperties.mod_version as String)
+    if (matcher.find())
+        copyProperties.mod_version = copyProperties.mod_version.substring(0, matcher.start()) + "+" + copyProperties.mod_version.substring(matcher.start())
+
     filesMatching(["META-INF/mods.toml", "modid.mixins.json", "pack.mcmeta"]) {
-        expand properties
+        expand copyProperties
     }
 
     exclude "**/*.pdn"
@@ -142,7 +149,7 @@ tasks.register('prepareDataResources', Sync) {
 
 // Run prepareDataResources before prepareRunData
 tasks.configureEach {
-    if (it.name == "prepareRunData")
+    if (it.name == "prepareRunData" || it.name == "prepareRunDataCompile")
         it.dependsOn "prepareDataResources"
 }
 
