--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
     // Core library
-    modImplementation "curse.maven:supermartijn642s-core-lib-454372:${core_library_file}"
+//    modImplementation "curse.maven:supermartijn642s-core-lib-454372:${core_library_file}"
+    modImplementation "a:supermartijn642corelib:1.1.17-fabric-mc1.21.2"
     // Config library
     modImplementation "curse.maven:supermartijn642s-config-lib-438332:${config_library_file}"
 
@@ -48,7 +49,7 @@ dependencies {
         exclude(group: "net.fabricmc.fabric-api")
     }
     // Jade
-    modImplementation "curse.maven:jade-324717:${jade_version}"
+    modCompileOnly "curse.maven:jade-324717:${jade_version}"
 
     // Just Enough Items
 //    modRuntimeOnly "curse.maven:jei-238222:${just_enough_items_file}"
