--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.21.1
-minecraft_dependency=[1.21,1.22)
-minecraft_suffix=mc1.21
+minecraft_version=1.21.3
+minecraft_dependency=[1.21.2,1.22)
+minecraft_suffix=mc1.21.3
 java_target=21
 java_dependency=>=21
-resource_pack_format=34
+resource_pack_format=57
 
 # NeoForge
-neoforge_version=21.1.12
-neoforge_dependency=[21.0.78-beta,)
+neoforge_version=21.3.0-beta
+neoforge_dependency=[21.2.0-beta,)
 javafml_dependency=[1,)
 
 # Mixin
@@ -35,7 +35,7 @@ maven_group=com.supermartijn642
 
 # Publishing
 publishing_release_type=stable
-publishing_game_versions=1.21 1.21.1
+publishing_game_versions=1.21.2 1.21.3
 curseforge_project_id=301034
 curseforge_required_dependency_ids=supermartijn642s-core-lib supermartijn642s-config-lib
 curseforge_optional_dependency_ids=
@@ -48,7 +48,7 @@ core_library_file=5677081
 core_library_dependency=[1.1.17,1.2.0)
 config_library_file=5546996
 config_library_dependency=[1.1.6,)
-jade_file=5591256
+jade_file=5835088
 the_one_probe_file=5502323
 
 # Runtime mods
